# CasperLabs-ERC777

./: .gitignore  CONTRIBUTING.md  Cargo.toml  HOW_TO.md  Makefile  README.md  TUTORIAL.md  bors.toml
erc1820/: Cargo.toml  README.md
erc1820/src/: constants.rs  detail.rs  entry_points.rs  error.rs  ierc777_sender.rs  implementers_registry.rs  lib.rs  managers_registry.rs
erc20/: Cargo.toml  README.md
erc20/src/: balances.rs  constants.rs  entry_points.rs  error.rs  external_contracts.rs  lib.rs  operators.rs
erc777/: Cargo.toml  README.md
erc777-recipient/: Cargo.toml  README.md
erc777-recipient/src/: balances.rs  constants.rs  entry_points.rs  erc777_registry.rs  ierc777_recipient.rs  lib.rs  recipient_notifier.rs
erc777-sender/: Cargo.toml  README.md
erc777-sender/src/: constants.rs  entry_points.rs  erc1820_registry.rs  erc777_registry.rs  error.rs  ierc777_sender.rs  lib.rs  register_movements.rs  sender_notifier.rs
erc777/src/: balances.rs  constants.rs  entry_points.rs  external_contracts.rs  lib.rs  operators.rs
example/erc1820-registry/: Cargo.toml
example/erc1820-registry-tests/: Cargo.toml
example/erc1820-registry-tests/src/: integration_tests.rs  test_erc1820.rs
example/erc1820-registry/src/: main.rs
example/erc20-tests/: Cargo.toml
example/erc20-tests/src/: integration_tests.rs  test_fixture.rs
example/erc20-token/src/: main.rs
example/erc777-tests/: Cargo.toml
example/erc777-tests/src/: integration_tests.rs  test_erc1820.rs  test_fixture.rs
example/erc777-tests/wasm/: erc1820_registry.wasm  erc20_token.wasm
example/implementations/erc1820-registry/: Cargo.toml
example/implementations/erc1820-registry/src/: main.rs
example/implementations/erc20-token/: Cargo.toml
example/implementations/erc20-token/src/: main.rs
example/implementations/erc777-recipient-contract/: Cargo.toml  README.md
example/implementations/erc777-recipient-contract/src/: main.rs
example/implementations/erc777-sender-contract/: Cargo.toml  README.md
example/implementations/erc777-sender-contract/src/: main.rs
example/implementations/erc777-token/: Cargo.toml
example/implementations/erc777-token/src/: main.rs
example/tests/erc1820-tests/: Cargo.toml
example/tests/erc1820-tests/src/: integration_tests.rs  test_erc1820.rs
example/tests/erc20-tests/: Cargo.toml
example/tests/erc20-tests/src/: integration_tests.rs  test_fixture.rs
example/tests/erc777-recipient-tests/: Cargo.toml
example/tests/erc777-recipient-tests/src/: integration_tests.rs  test_fixture.rs
example/tests/erc777-recipient-tests/wasm/: erc777_recipient.wasm  erc777_token.wasm
example/tests/erc777-sender-tests/: Cargo.toml
example/tests/erc777-sender-tests/src/: integration_tests.rs  test_fixture.rs
example/tests/erc777-sender-tests/wasm/: erc20_token.wasm  erc777_sender.wasm
example/tests/erc777-tests/: Cargo.toml
example/tests/erc777-tests/src/: integration_tests.rs  multiple_fixture.rs  test_fixture.rs
example/tests/erc777-tests/wasm/: erc1820_registry.wasm
testing/erc20-test/src/: main.rs
testing/erc777-test-call/: Cargo.toml
testing/erc777-test-call/src/: main.rs
testing/tests/src/: lib_integration_tests.rs
testing/tests/wasm/: erc1820_registry.wasm
util/: Cargo.toml
util/src/: ierc777_recipient.rs
