[workspace]
members = [
    "erc20",
    "testing/tests",
    "testing/erc20-test",
    "testing/erc20-test-call",
    "example/erc20-token",
    "example/erc20-tests",
    "example/erc777-tests",
    "erc1820"
]
default-members = [
    "erc20",
    "testing/tests",
    "testing/erc20-test",
    "testing/erc20-test-call",
    "example/erc20-tests",
    "example/erc777-tests",
    "erc1820"
]

[profile.release]
codegen-units = 1
lto = true
