[workspace]
members = [
    "erc20",
    "erc1820",
    "erc777-recipient",
    "erc777-sender",
    "example/tests/erc1820-tests",
    "example/tests/erc20-tests",
    "example/tests/erc777-tests",
    "example/tests/erc777-recipient-tests",
    "example/tests/erc777-sender-tests",
    "example/implementations/erc1820-registry",
    "example/implementations/erc20-token",
    "example/implementations/erc777-recipient-contract",
    "example/implementations/erc777-sender-contract"
]
default-members = [
    "erc20",
    "erc1820",
    "erc777-recipient",
    "erc777-sender",
    "example/tests/erc1820-tests",
    "example/tests/erc20-tests",
    "example/tests/erc777-tests",
    "example/tests/erc777-recipient-tests",
    "example/tests/erc777-sender-tests",
    "example/implementations/erc1820-registry",
    "example/implementations/erc20-token",
    "example/implementations/erc777-recipient-contract",
    "example/implementations/erc777-sender-contract"
]

[profile.release]
codegen-units = 1
lto = true
