[package]
name = "casper-erc777-recipient"
version = "0.0.1"
description = "A library for using ERC777Recipient"
readme = "README.md"

[dependencies]
base64 = { version = "0.13.0", default-features = false, features = ["alloc"] }
casper-contract = "1.3.2"
casper-types = "1.3.2"
hex = { version = "0.4.3", default-features = false }
once_cell = { version = "1.8.0", default-features = false }

[features]
default = ["std"]
std = ["casper-contract/std", "casper-types/std"]
