[package]
name = "erc777-recipient-contract"
version = "0.0.1"
edition = "2018"

[dependencies]
casper-contract = "1.3.2"
casper-erc777-recipient = { path = "../../../erc777-recipient" }
casper-types = "1.3.2"

[[bin]]
name = "erc777_recipient"
path = "src/main.rs"
bench = false
doctest = false
test = false
