[package]
name = "erc777-token"
authors = ["Michał Papierski <michal@casperlabs.io>"]
version = "0.0.1"
edition = "2018"

[dependencies]
casper-contract = "1.3.2"
casper-erc777 = { path = "../../../erc777" }
casper-types = "1.3.2"

[[bin]]
name = "erc777_token"
path = "src/main.rs"
bench = false
doctest = false
test = false
