[package]
name = "erc777-sender-tests"
version = "0.0.1"
edition = "2018"

[dev-dependencies]
base64 = "0.13.0"
blake2 = "0.9.2"
casper-engine-test-support = { version = "1.3.2", features = ["test-support"] }
casper-erc20 = { version = "0.2.1", features = ["std"], path = "../../../erc20" }
casper-erc1820 = { version = "0.1.0", features = ["std"], path = "../../../erc1820" }
casper-erc777-sender = { version = "0.1.0", features = ["std"], path = "../../../erc777-sender" }
casper-types = { version = "1.3.2", features = ["std"] }
casper-contract = "1.3.2"
once_cell = "1.8.0"
hex = "0.4.3"


[[bin]]
name = "erc777-sender-tests"
path = "src/integration_tests.rs"
bench = false
doctest = false
