[package]
name = "erc777-tests"
version = "0.0.1"
authors = ["Michał Papierski <michal@casperlabs.io>"]
edition = "2018"

[dev-dependencies]
base64 = "0.13.0"
blake2 = "0.9.2"
casper-engine-test-support = { version = "1.3.2", features = ["test-support"] }
casper-erc777 = { version = "0.2.1", features = ["std"], path = "../../../erc777" }
casper-erc1820 = { version = "0.1.0", features = ["std"], path = "../../../erc1820" }
casper-types = { version = "1.3.2", features = ["std"] }
casper-contract = "1.3.2"
once_cell = "1.8.0"
hex = "0.4.3"


[[bin]]
name = "erc777-tests"
path = "src/integration_tests.rs"
bench = false
doctest = false
